syntax = "proto3";

option java_package = "com.rinfinity.datastoresample.model";
option java_multiple_files = true;

message UserModel {
  string first_name = 1;
  string last_name = 2;
  string dept_name = 3;
  string phone_number = 4;
}